--- a/cloud-music/src/assets/less/recommend.less
+++ b/cloud-music/src/assets/less/recommend.less
@@ -1,40 +1,79 @@
-.recommend{
-	margin: 16px 0;
-	h4{
-		font-weight: normal;
-		font-size: 18px;
-		padding-left: 8px;
-		position: relative;
-		margin-bottom: 12px;
-		&::after{
-			content: '';
-			position: absolute;
-			top: 5px;
-			left: 0;
-			width: 2px;
-			height: 16px;
-			background: #d33a31;
-		}
-	}
-	// 列表
-	.list{
-		display: flex;
-		flex-wrap: wrap;
-		width: 100%;
-		justify-content: space-between;
-		li{
-			width: 33%;
-			img{
-				width: 100%;
+.recommend {
+  margin: 16px 0;
+  h4 {
+    font-weight: normal;
+    font-size: 18px;
+    padding-left: 8px;
+    position: relative;
+    margin-bottom: 12px;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 5px;
+      left: 0;
+      width: 2px;
+      height: 16px;
+      background: #d33a31;
+    }
+  }
+  // 推荐列表
+  .list {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
+    li {
+      width: 33%;
+      img {
+        width: 100%;
+      }
+      p {
+        font-size: 13px;
+        padding: 4px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+    }
+  }
+  .mt {
+    margin-top: 10px;
+  }
+  // 新歌列表
+  .newSongs {
+    li {
+			width: 96%;
+			margin: 0 auto;
+			border-bottom: 1px solid #ccc;
+			position: relative;
+      .title {
+				margin-top: 4px;
+				line-height: 30px;
+        .alias {
+					color: #999;
+					margin-left: 10px;
+        }
+      }
+      .artist {
+				font-size: 14px;
+				line-height: 20px;
+				color: #999;
+				margin-bottom: 6px;
 			}
-			p{
-				font-size: 13px;
-				padding: 4px;
-				display: -webkit-box;
-				-webkit-line-clamp: 2;
-				-webkit-box-orient: vertical;
-				overflow: hidden;
+			.playBtn {
+				background: url('https://s3.music.126.net/mobile-new/img/index_icon_2x.png?5207a28c3767992ca4bb6d4887c74880=')
+					no-repeat;
+				background-size: 166px 97px;
+				// display: inline-block;
+				width: 22px;
+				height: 22px;
+				position: absolute;
+				right: 10px;
+				top: 50%;
+				margin-top: -11px;
+				background-position: -24px 0;
 			}
-		}
-	}
+    }
+  }
 }
